web-infras/parser/tests/fixtures/babel/es2015/let/let-array-with-newline/output.txt
[SyntaxError]: Lexical declaration cannot appear in a single-statement context. (1,4)
1|do let
 |  ^
